# better-auth-rs

./: Cargo.toml  README.md
.cursor/rules/: crate-structure.mdc  plugin-development.mdc  testing-standards.mdc
crates/adapters/memory/: Cargo.toml  README.md
crates/adapters/memory/src/: lib.rs
crates/core/core/: Cargo.toml  README.md
crates/core/core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/core/core/src/context/: mod.rs
crates/core/core/src/router/: mod.rs
crates/core/core/src/schema/: builder.rs  diff.rs  migration.rs  mod.rs
crates/core/core/tests/: integration_tests.rs
crates/core/macros/: Cargo.toml  README.md
crates/core/macros/src/: app_macro.rs  event_macro.rs  extension_macro.rs  lib.rs  model_macro.rs
crates/core/macros/src/parsing/: mod.rs
crates/core/main/: Cargo.toml  README.md
crates/core/main/examples/: basic_app.rs
crates/core/main/src/: lib.rs
crates/events/events/: Cargo.toml  README.md
crates/events/events-sdk/: Cargo.toml  README.md
crates/events/events-sdk/src/: builder.rs  lib.rs  traits.rs
crates/events/events/src/: bus.rs  emitter.rs  error.rs  event.rs  handler.rs  lib.rs  middleware.rs  registry.rs
crates/events/events/src/dlq/: handler.rs  mod.rs  storage.rs
crates/events/events/src/replay/: engine.rs  mod.rs
crates/events/events/src/schema/: migration.rs  mod.rs  registry.rs  validator.rs
crates/events/events/src/store/: memory.rs  mod.rs  postgres.rs  redis.rs  trait_def.rs
crates/infra/admin/: Cargo.toml  README.md
crates/infra/admin/src/: api.rs  lib.rs  stats.rs
crates/infra/deploy/docker/: .dockerignore  .env.example  Dockerfile  docker-compose.yml
crates/infra/deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
crates/infra/docs/: Cargo.toml  README.md
crates/infra/docs/src/: lib.rs
crates/infra/server/: Cargo.toml  README.md
crates/infra/server/src/: config.rs  lib.rs  main.rs
crates/plugins/access/: Cargo.toml
crates/plugins/access/src/: handlers.rs  lib.rs  storage.rs  types.rs
crates/plugins/anonymous/: Cargo.toml
crates/plugins/anonymous/src/: config.rs  handlers.rs  lib.rs  schema.rs
crates/plugins/api-key/: Cargo.toml
crates/plugins/api-key/src/: config.rs  generator.rs  handlers.rs  lib.rs  rate_limit.rs  schema.rs
crates/plugins/email-otp/: Cargo.toml
crates/plugins/email-otp/src/: config.rs  handlers.rs  lib.rs  schema.rs
crates/plugins/integrations/integrations/axum/: Cargo.toml
crates/plugins/integrations/integrations/axum/src/: extractor.rs  layer.rs  lib.rs  routes.rs
crates/plugins/jwt/: Cargo.toml
crates/plugins/jwt/src/: claims.rs  lib.rs  token.rs
crates/plugins/jwt/tests/: jwt_tests.rs
crates/plugins/magic-link/: Cargo.toml
crates/plugins/magic-link/src/: config.rs  handlers.rs  lib.rs  schema.rs
crates/plugins/oauth/: Cargo.toml
crates/plugins/oauth/src/: lib.rs  provider.rs  routes.rs
crates/plugins/otp-utils/: Cargo.toml
crates/plugins/otp-utils/src/: generator.rs  lib.rs  rate_limit.rs  storage.rs  verification.rs
crates/plugins/passkey/: Cargo.toml
crates/plugins/passkey/src/: config.rs  handlers.rs  lib.rs  schema.rs  webauthn.rs
crates/plugins/password/: Cargo.toml
crates/plugins/password/src/: lib.rs
crates/plugins/password/tests/: password_tests.rs
crates/plugins/phone-number/: Cargo.toml
crates/plugins/phone-number/src/: config.rs  handlers.rs  lib.rs  schema.rs
crates/plugins/two-factor/: Cargo.toml
crates/plugins/two-factor/src/: backup.rs  config.rs  handlers.rs  lib.rs  schema.rs  totp.rs
crates/webhooks/webhooks/: Cargo.toml  README.md
crates/webhooks/webhooks-sdk/: Cargo.toml  README.md
crates/webhooks/webhooks-sdk/src/: builder.rs  client.rs  lib.rs  traits.rs
crates/webhooks/webhooks/src/: circuit_breaker.rs  delivery.rs  endpoint.rs  error.rs  lib.rs  queue.rs  rate_limiter.rs  receiver.rs  retry.rs  signature.rs  storage.rs  system.rs
migrations/events/: 001_create_event_store.sql  002_create_webhook_queue.sql  README.md
