[package]
name = "better_auth"
description = "A comprehensive authentication library for Rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
better_auth_core.workspace = true
better_auth_macros.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
better_auth_adapter_memory = { path = "../../adapters/memory" }

[[example]]
name = "basic_app"
path = "examples/basic_app.rs"
