[package]
name = "better_auth_server"
description = "Standalone authentication server for Better Auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "better-auth-server"
path = "src/main.rs"

[dependencies]
better_auth_core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
toml = "0.8"
tracing-subscriber = "0.3"
