[package]
name = "better_auth_plugin_access"
description = "Role-based access control plugin for Better Auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
better_auth_core.workspace = true
better_auth_events_sdk.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true

[dev-dependencies]
better_auth_adapter_memory = { path = "../../adapters/memory" }
tokio = { workspace = true, features = ["test-util", "macros"] }
