[package]
name = "better_auth_plugin_anonymous"
description = "Anonymous authentication plugin for Better Auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
better_auth_core.workspace = true
better_auth_events_sdk.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
