[package]
name = "better_auth_otp_utils"
description = "Shared OTP utilities for Better Auth plugins"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
better_auth_core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
rand = "0.8"
