[package]
name = "better_auth_plugin_two_factor"
description = "Two-factor authentication plugin for Better Auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
better_auth_core.workspace = true
better_auth_macros.workspace = true
better_auth_events_sdk.workspace = true
better_auth_otp_utils.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
totp-rs = "5.0"
base32 = "0.5"
rand = "0.8"
