[package]
name = "better_auth_axum"
description = "Axum integration for Better Auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
better_auth_core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
axum = "0.8"
tower = "0.5"
http = "1.0"

# Optional JWT support
better_auth_plugin_jwt = { path = "../../../jwt", optional = true }

[features]
default = []
jwt = ["better_auth_plugin_jwt"]
